k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sltr-welcome-app
  namespace: sltr-fanny
spec:
  replicas: 2
  selector:
    matchLabels:
      app: welcome-app
  template:
    metadata:
      labels:
        app: welcome-app
    spec:
      containers:
      - name: welcome-app
        image: testing/welcome:latest
        ports:
        - containerPort: 5000
