k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sltr-welcome-ingress
  namespace: sltr-fanny
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: welcome.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome-service
            port:
              number: 80
  tls:
  - hosts:
    - welcome.example.com
    secretName: welcome-tls
